# delete_from_recycle

./: CMakeLists.txt  README.md  main.cpp
helpers/Cpp/: helper.cpp
helpers/Cpp/console/: HConsole.cpp
helpers/Cpp/work_with_recycle/: HWork_with_recycle.cpp
helpers/Headers/: helper.h
helpers/Headers/console/: HConsole.h
helpers/Headers/work_with_recycle/: HWork_with_recycle.h
